<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".activity.LoginActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:backgroundTint="@color/colorBtn"
        android:ems="10"
        android:hint="@string/txt_username"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorBtn"
        android:ems="10"
        android:hint="@string/txt_senha"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <Button
        android:id="@+id/btEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/efeito_btn_entrar"
        android:text="@string/txt_entrar"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenha"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/btn_LinkSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_recuperar_senha"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:background="@android:color/transparent"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textLogo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085"
        app:srcCompat="@drawable/car" />

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/textRodapeLogo"
        android:layout_width="55dp"
        android:layout_height="26dp"
        android:layout_marginBottom="35dp"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998" />

    <TextView
        android:id="@+id/textRodape"
        android:layout_width="317dp"
        android:layout_height="29dp"
        android:text="@string/txt_logo_rodape"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

</androidx.constraintlayout.widget.ConstraintLayout>