<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_home"
    tools:context=".activity.MainActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_listarVeiculos"
                android:layout_width="191.5dp"
                android:layout_height="197dp"
                android:layout_margin="4dp"
                android:background="@drawable/efeito_btn_home"
                android:drawableTop="@drawable/ic_lista"
                android:padding="8dp"
                android:text="@string/txt_btn_listarVeiculos"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_btn_home"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_calendario"
                android:layout_width="191.5dp"
                android:layout_height="197dp"
                android:layout_margin="4dp"
                android:background="@drawable/efeito_btn_home"
                android:drawableTop="@drawable/ic_calendar"
                android:drawingCacheQuality="high"
                android:duplicateParentState="false"
                android:ellipsize="none"
                android:padding="8dp"
                android:text="@string/txt_btn_calendario"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_btn_home"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_info"
                android:layout_width="191.5dp"
                android:layout_height="197dp"
                android:layout_margin="4dp"
                android:background="@drawable/efeito_btn_home"
                android:drawableTop="@drawable/ic_info"
                android:padding="8dp"
                android:text="@string/txt_btn_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_btn_home"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_duvidas"
                android:layout_width="191.5dp"
                android:layout_height="197dp"
                android:layout_margin="4dp"
                android:background="@drawable/efeito_btn_home"
                android:drawableTop="@drawable/ic_duvida"
                android:padding="8dp"
                android:text="@string/txt_btn_duvidas"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_btn_home"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textRodapeLogo"
        android:layout_width="53dp"
        android:layout_height="19dp"
        android:layout_marginBottom="35dp"
        android:text="@string/logo"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textRodape"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/txt_logo_rodape"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.065"
        tools:text="Nome" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Olá,"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toStartOf="@+id/tv_nome"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.074"
        tools:text="Data" />

</androidx.constraintlayout.widget.ConstraintLayout>