<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_home"
    tools:context=".activity.DuvidaActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <Button
            android:id="@+id/btntelefone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/efeito_btn_entrar"
            android:drawableLeft="@drawable/ic_telephone"
            android:text="@string/txt_telefone"
            android:textColor="@color/text_btn_duvida"
            android:textSize="16dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView1"
        tools:layout_editor_absoluteX="-16dp">

        <Button
            android:id="@+id/btnweb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/efeito_btn_entrar"
            android:drawableLeft="@drawable/ic_network"
            android:text="@string/txt_site"
            android:textAllCaps="false"
            android:textColor="@color/text_btn_duvida"
            android:textSize="16dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btnemail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/efeito_btn_entrar"
            android:drawableLeft="@drawable/ic_mail"
            android:text="@string/txt_email"
            android:textAllCaps="false"
            android:textColor="@color/text_btn_duvida"
            android:textSize="16dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="244dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="258dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btnfacebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/efeito_btn_entrar"
            android:drawableLeft="@drawable/ic_facebook"
            android:text="@string/txt_facebook"
            android:textAllCaps="false"
            android:textColor="@color/text_btn_duvida"
            android:textSize="16dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="310dp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>